Fixed alignment in About page

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -19,6 +19,7 @@ body {
   color: var(--font-color);
   font-family: var(--heading-font);
 }
+
 .hero-content {
   height: 100vh;
   background: #eef3ee;
@@ -64,10 +65,13 @@ h3 {
   margin: 50px 0 80px 0;
 }
 
+.about-page {
+  background: #eef3ee;
+}
+
 .about-content {
   padding-top: 120px;
   margin-top: 50px;
-  background: #eef3ee;
 }
 
 .about-photo img {
@@ -122,7 +126,7 @@ h3 {
   }
 
   .about-content {
-    margin: 0 35px;
+    margin: 0 30px;
   }
 
   .about-photo img {
